# rasp-camera

./: .gitignore  main_new.py  main_new.spec  main_thread.spec  pack.sh  pdf.py  start.sh
1838/: InfraredRemoteController.py  RemoteController.py  back.py  callback.py  hw.py  test.py
case/: 外耳道炎.json  油耳.json  耳结石.json  耳膜穿孔.json  耵聍栓塞.json  耵聍结石.json
cpp/: CMakeLists.txt  cvxFont.cpp  cvxFont.h  decode.cpp  decode.h  frameQueue.h  main.cpp  main.cpp.back  main.cpp.save  main.cpp.thread
data/img/: 采耳数据登记表.xlsx
data/img/source/: 采耳数据登记表.xlsx
data/template/: disease
html/: html2pdf.html
scripts/: argsort.py  black.py  camera.py  client.py  cv.py  demo.py  freetypetest.py  game.py  getfile.py  hanzi.py  key.py  loadjson.py  lunkuo.py  main.py  main_lightnet_thread.py  main_new.py  main_thread.py  mymodule.py  networks.py  overlay.py  package.txt  process.py  qu.py  remote.py  remote_controller.py  resnettest.py  server.py  svmclf.py  templatematch.py  templatematch_thread.py  test.py  thread.py  threads.py  three.py  tkinter.py  train.py  tv.py  video.py
